Committing TCM Project- Prakash Lal

--- a/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
@@ -98,7 +98,7 @@
                 </div>
 
                 <!-- ACH -->
-               <p:panel id="achPanel" style="border: 0px; background: transparent"
+               <p:panel id="achPanel" styleClass="Container100" style="border: 0px; background: transparent"
                        rendered="#{tdcto.tdMasterData.fundType == 1}">
                    <div class="EmptyBox20"></div>
                    <div class="Container100">
@@ -167,7 +167,7 @@
                </p:panel>
 
                 <!-- ACAT -->
-                <p:panel id="acatPanel" style="border: 0px; background: transparent"
+                <p:panel id="acatPanel" styleClass="Container100" style="border: 0px; background: transparent"
                          rendered="#{tdcto.tdMasterData.fundType == 2}">
                     <div class="EmptyBox20"></div>
                     <div class="Container100">
@@ -226,7 +226,7 @@
                 </p:panel>
 
                 <!-- Wire transfer -->
-                <p:panel id="wirePanel" style="border: 0px; background: transparent"
+                <p:panel id="wirePanel" styleClass="Container100" style="border: 0px; background: transparent"
                          rendered="#{tdcto.tdMasterData.fundType == 3}">
                     <div class="EmptyBox20"></div>
                     <h3 class="FSResponsiveFA">Domestic Wire Information</h3>
@@ -287,7 +287,7 @@
         </p:tab>
 
         <p:tab title="Recurring">
-            <p:panel id="recurrringPanel" style="border: 0px; background: transparent">
+            <p:panel id="recurrringPanel" styleClass="Container100" style="border: 0px; background: transparent">
                 <div class="Container45 Fright CustomWidthFA2 MarTop5">
                     <label Class="Container100"
                            style="text-align: left !important; font-weight: bold !important;">
