--- a/tcm/modules/web/src/main/webapp/pages/advisor/index.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/advisor/index.xhtml
@@ -115,7 +115,6 @@
                             </div>
                             </div>
                         </a>
-                        <a href="https://analytics.google.com/analytics/web/#report/visitors-overview/a38866658w83245505p86215915/">
                         <div class="Container50">
                            <div class="Wid90 BorderedBox MarAuto TexAlCenter HoverEffect">
                             <div class="ContainerIndent">
@@ -129,7 +128,6 @@
                             </div>
                             </div>
                             </div>
-                        </a>
                     </div>
 
                 </div>
@@ -138,6 +136,8 @@
         <!-- BOX END -->
 
         <!-- BOX START -->
+        <p:outputPanel style="border: 0px; background: transparent" rendered="false">
+
         <div class="layout-portlets-box">
             <div class="Container100 Responsive100">
             
@@ -202,6 +202,7 @@
                 </div>
             </div>
         </div>
+        </p:outputPanel>
         <!-- BOX END -->
 
     </ui:define>
