--- a/tcm/modules/web/src/main/webapp/pages/custody/td/beneficiary.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/beneficiary.xhtml
@@ -163,8 +163,10 @@
 		</div>
 	</div>
 	<div class="Container100 MarTop20" style="margin: 10px 10px;">
-		<p:commandLink styleClass="UI-prevButtonFA Fleft" />
+		<p:commandLink styleClass="UI-prevButtonFA Fleft"
+                       actionListener="#{tdcto.prevPage}"/>
 
-		<p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton" />
+		<p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
+                       actionListener="#{tdcto.nextPage}"/>
 	</div>
 </ui:composition>
