--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p4.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p4.xhtml
@@ -24,30 +24,30 @@
 
                 <p:panel id="riskimgpanel" styleClass="Container100"
                          style="border: 0px; background: transparent;">
-                    <p:commandLink action="#{tcmpb.riskSelected(1)}"
+                    <p:commandLink actionListener="#{tcmpb.riskSelected(1)}"
                                    update=":ceForm:inputArea, :ceForm:riskimgpanel">
                         <img src="#{tcmpb.getRiskGraphic(1)}" class="riskImage"/>
                     </p:commandLink>
 
-                    <p:commandLink action="#{tcmpb.riskSelected(2)}"
+                    <p:commandLink actionListener="#{tcmpb.riskSelected(2)}"
                                    update=":ceForm:inputArea, :ceForm:riskimgpanel">
                         <img src="#{tcmpb.getRiskGraphic(2)}"
                              class="riskImage"/>
                     </p:commandLink>
 
-                    <p:commandLink action="#{tcmpb.riskSelected(3)}"
+                    <p:commandLink actionListener="#{tcmpb.riskSelected(3)}"
                                    update=":ceForm:inputArea, :ceForm:riskimgpanel">
                         <img src="#{tcmpb.getRiskGraphic(3)}"
                              class="riskImage"/>
                     </p:commandLink>
 
-                    <p:commandLink action="#{tcmpb.riskSelected(4)}"
+                    <p:commandLink actionListener="#{tcmpb.riskSelected(4)}"
                                    update=":ceForm:inputArea, :ceForm:riskimgpanel">
                         <img src="#{tcmpb.getRiskGraphic(4)}"
                              class="riskImage"/>
                     </p:commandLink>
 
-                    <p:commandLink action="#{tcmpb.riskSelected(5)}"
+                    <p:commandLink actionListener="#{tcmpb.riskSelected(5)}"
                                    update=":ceForm:inputArea, :ceForm:riskimgpanel">
                         <img src="#{tcmpb.getRiskGraphic(5)}"
                              class="riskImage"/>
