--- a/tcm/modules/web/src/main/webapp/pages/custody/td/accttype.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/accttype.xhtml
@@ -6,126 +6,154 @@
                 xmlns:pe="http://primefaces.org/ui/extensions">
 
     <div class="Container80 Responsiv90 MarTop5 MarCenter ui-color paddingFA" style="margin-bottom: 15px;">
-   
+
         <div class="EmptyBox10"></div>
         <h3 class="FSResponsiveFA">What type of account would you
             like to open?</h3>
 
-        <p:selectOneRadio id="acctTypeRadio" value="#{tdcto.tdMasterData.accttype}" layout="custom"
-                required="true" requiredMessage="Must select one of these account type!">
-            <f:selectItem itemLabel="Individual" itemValue="1" />
-            <f:selectItem itemLabel="Joint" itemValue="2" />
-            <f:selectItem itemLabel="UGMA" itemValue="3" />
-            <f:selectItem itemLabel="Traditional IRA" itemValue="4" />
-            <f:selectItem itemLabel="ROTH" itemValue="5" />
-            <f:selectItem itemLabel="Rollover IRA" itemValue="6" />
-            <f:selectItem itemLabel="Beneficiary IRA" itemValue="7" />
-        </p:selectOneRadio>
-
         <div class="EmptyBox10"></div>
 
-        <div class="Container45 CustomWidthAccountypePanel Fleft ">
-            <p:panel styleClass="Wid100 Fleft MarCenter tcmPanel-UI">
-                <div class="Container60">
-                    <h4>Individual</h4>
+        <p:panel id="acctTypePanel"
+                 style="border: 0px; background: transparent">
 
-                    <div class="EmptyBox5"></div>
-                    <h6 class="FontNormal">(Description)</h6>
-                </div>
-                <div class="Container40 textAlign">
-                    <p:radioButton id="opt1" for="acctTypeRadio" itemIndex="0" styleClass="textAlign" />
-                </div>
-            </p:panel>
-        </div>
-        <div class="Container45 CustomWidthAccountypePanel Fright">
-            <p:panel styleClass="Wid100 MarCenter tcmPanel-UI">
-                <div class="Container60">
-                    <h4>Traditional IRA</h4>
+            <div class="Container45 CustomWidthAccountypePanel Fleft"
+                    style="height: 60px">
+                <p:commandLink actionListener="#{tdcto.selectAcctType(1)}"
+                               update=":ctoForm:tdaccordian:acctTypePanel">
+                    <p:panel styleClass="Wid100 Fleft MarCenter tcmPanel-UI">
+                        <div class="Container60">
+                            <h4>Individual</h4>
 
-                    <div class="EmptyBox5"></div>
-                    <h6 class="FontNormal">(Description)</h6>
-                </div>
-                <div class="Container40 textAlign">
-                    <p:radioButton id="opt4" for="acctTypeRadio" itemIndex="4" styleClass="textAlign" />
-                </div>
-            </p:panel>
-        </div>
-        <div class="EmptyBox10"></div>
-        <div class="Container45 CustomWidthAccountypePanel Fleft ">
-            <p:panel styleClass="Wid100 MarCenter tcmPanel-UI">
-                <div class="Container60">
-                    <h4>Joint</h4>
+                            <div class="EmptyBox5"></div>
+                            <h6 class="FontNormal">(Taxable Individual Account)</h6>
+                        </div>
+                        <div class="Container40 textAlign">
+                            <img src="#{tdcto.tdMasterData.getCheckedImage(1)}" class="atCheckMarkImg"/>
+                        </div>
+                    </p:panel>
+                </p:commandLink>
 
-                    <div class="EmptyBox5"></div>
-                    <h6 class="FontNormal">(Description)</h6>
-                </div>
-                <div class="Container40 textAlign">
-                    <p:radioButton id="opt2" for="acctTypeRadio" itemIndex="1" styleClass="textAlign" />
-                </div>
-            </p:panel>
-        </div>
-        <div class="Container45 CustomWidthAccountypePanel Fright">
-            <p:panel styleClass="Wid100 MarCenter tcmPanel-UI">
-                <div class="Container60">
-                    <h4>Roth IRA</h4>
+            </div>
+            <div class="Container45 CustomWidthAccountypePanel Fright"
+                 style="height: 60px">
+                <p:commandLink actionListener="#{tdcto.selectAcctType(4)}"
+                               update=":ctoForm:tdaccordian:acctTypePanel">
+                <p:panel styleClass="Wid100 MarCenter tcmPanel-UI">
+                    <div class="Container60">
+                        <h4>Traditional IRA</h4>
 
-                    <div class="EmptyBox5"></div>
-                    <h6 class="FontNormal">(Description)</h6>
-                </div>
-                <div class="Container40 textAlign">
-                    <p:radioButton id="opt5" for="acctTypeRadio" itemIndex="5" styleClass="textAlign" />
-                </div>
-            </p:panel>
-        </div>
-        <div class="EmptyBox10"></div>
-        <div class="Container45 CustomWidthAccountypePanel Fleft ">
-            <p:panel styleClass="Wid100 MarCenter tcmPanel-UI">
-                <div class="Container60">
-                    <h4>UTMA / UGMA</h4>
+                        <div class="EmptyBox5"></div>
+                        <h6 class="FontNormal">(Individual Retirement Account)</h6>
+                    </div>
+                    <div class="Container40 textAlign">
+                        <img src="#{tdcto.tdMasterData.getCheckedImage(4)}" class="atCheckMarkImg"/>
+                    </div>
+                </p:panel>
+                </p:commandLink>
+            </div>
+            <div class="EmptyBox10"></div>
+            <div class="Container45 CustomWidthAccountypePanel Fleft "
+                 style="height: 60px">
+                <p:commandLink actionListener="#{tdcto.selectAcctType(2)}"
+                               update=":ctoForm:tdaccordian:acctTypePanel">
+                <p:panel styleClass="Wid100 MarCenter tcmPanel-UI">
+                    <div class="Container60">
+                        <h4>Joint</h4>
 
-                    <div class="EmptyBox5"></div>
-                    <h6 class="FontNormal">(Description)</h6>
-                </div>
-                <div class="Container40 textAlign">
-                    <p:radioButton id="opt3" for="acctTypeRadio" itemIndex="3" styleClass="textAlign" />
-                </div>
-            </p:panel>
-        </div>
-        <div class="Container45 CustomWidthAccountypePanel Fright">
-            <p:panel styleClass="Wid100 MarCenter tcmPanel-UI">
-                <div class="Container60">
-                    <h4>Rollover IRA</h4>
+                        <div class="EmptyBox5"></div>
+                        <h6 class="FontNormal">(Taxable Joint Account)</h6>
+                    </div>
+                    <div class="Container40 textAlign">
+                        <img src="#{tdcto.tdMasterData.getCheckedImage(2)}" class="atCheckMarkImg"/>
+                    </div>
+                </p:panel>
+                </p:commandLink>
+            </div>
+            <div class="Container45 CustomWidthAccountypePanel Fright"
+                 style="height: 60px">
+                <p:commandLink actionListener="#{tdcto.selectAcctType(5)}"
+                               update=":ctoForm:tdaccordian:acctTypePanel">
+                <p:panel styleClass="Wid100 MarCenter tcmPanel-UI">
+                    <div class="Container60">
+                        <h4>Roth IRA</h4>
 
-                    <div class="EmptyBox5"></div>
-                    <h6 class="FontNormal">(Description)</h6>
-                </div>
-                <div class="Container40 textAlign">
-                    <p:radioButton id="opt6" for="acctTypeRadio" itemIndex="6" styleClass="textAlign" />
-                </div>
-            </p:panel>
-        </div>
-        <div class="EmptyBox10"></div>
-        <div class="Container45 CustomWidthAccountypePanel Fleft ">
-        </div>
-        <div class="Container45 CustomWidthAccountypePanel Fright">
-            <p:panel styleClass="Wid100 MarCenter tcmPanel-UI">
-                <div class="Container60">
-                    <h4>Beneficiary IRA</h4>
+                        <div class="EmptyBox5"></div>
+                        <h6 class="FontNormal">(ROTH Individual Retirement Account)</h6>
+                    </div>
+                    <div class="Container40 textAlign">
+                        <img src="#{tdcto.tdMasterData.getCheckedImage(5)}" class="atCheckMarkImg"/>
+                    </div>
+                </p:panel>
+                </p:commandLink>
+            </div>
+            <div class="EmptyBox10"></div>
+            <div class="Container45 CustomWidthAccountypePanel Fleft "
+                 style="height: 60px">
+                <p:commandLink actionListener="#{tdcto.selectAcctType(3)}"
+                               update=":ctoForm:tdaccordian:acctTypePanel">
+                <p:panel styleClass="Wid100 MarCenter tcmPanel-UI">
+                    <div class="Container60">
+                        <h4>UTMA / UGMA</h4>
 
-                    <div class="EmptyBox5"></div>
-                    <h6 class="FontNormal">(Description)</h6>
-                </div>
-                <div class="Container40 textAlign">
-                    <p:radioButton id="opt7" for="acctTypeRadio" itemIndex="7" styleClass="textAlign" />
-                </div>
-            </p:panel>
-        </div>
+                        <div class="EmptyBox5"></div>
+                        <h6 class="FontNormal">(Minor Cutodian Account)</h6>
+                    </div>
+                    <div class="Container40 textAlign">
+                        <img src="#{tdcto.tdMasterData.getCheckedImage(3)}" class="atCheckMarkImg"/>
+                    </div>
+                </p:panel>
+                </p:commandLink>
+            </div>
+            <div class="Container45 CustomWidthAccountypePanel Fright"
+                 style="height: 60px">
+                <p:commandLink actionListener="#{tdcto.selectAcctType(6)}"
+                               update=":ctoForm:tdaccordian:acctTypePanel">
+                <p:panel styleClass="Wid100 MarCenter tcmPanel-UI">
+                    <div class="Container60">
+                        <h4>Rollover IRA</h4>
+
+                        <div class="EmptyBox5"></div>
+                        <h6 class="FontNormal">(Rollover Individual Retirement Account)</h6>
+                    </div>
+                    <div class="Container40 textAlign">
+                        <img src="#{tdcto.tdMasterData.getCheckedImage(6)}" class="atCheckMarkImg"/>
+                    </div>
+                </p:panel>
+                </p:commandLink>
+            </div>
+            <div class="EmptyBox10"></div>
+
+            <div class="Container45 CustomWidthAccountypePanel Fleft "
+                 style="height: 60px">
+                <!-- This is left blank so that next panel can go right -->
+            </div>
+
+            <div class="Container45 CustomWidthAccountypePanel Fright"
+                 style="height: 60px">
+                <p:commandLink actionListener="#{tdcto.selectAcctType(7)}"
+                               update=":ctoForm:tdaccordian:acctTypePanel">
+                <p:panel styleClass="Wid100 MarCenter tcmPanel-UI">
+                    <div class="Container60">
+                        <h4>Beneficiary IRA</h4>
+
+                        <div class="EmptyBox5"></div>
+                        <h6 class="FontNormal">(Beneficiary Individual Retirement Account)</h6>
+                    </div>
+                    <div class="Container40 textAlign">
+                        <img src="#{tdcto.tdMasterData.getCheckedImage(7)}" class="atCheckMarkImg"/>
+                    </div>
+                </p:panel>
+                </p:commandLink>
+            </div>
+        </p:panel>
+
         <div class="Container100 MarTop20" style="margin: 10px 10px;">
-<!--
-            <p:commandLink styleClass="UI-prevButtonFA Fleft"/>
--->
+            <!--
+                        <p:commandLink styleClass="UI-prevButtonFA Fleft"/>
+            -->
 
-            <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"/>
+            <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
+                    actionListener="#{tdcto.nextPage}"/>
         </div>
         <div class="EmptyBox10"></div>
     </div>
