--- a/tcm/modules/web/src/main/webapp/pages/custody/td/regulatory.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/regulatory.xhtml
@@ -159,12 +159,14 @@
                 </div>
             </div>
             <div class="Container100 MarTop20" style="margin: 10px 10px;">
-                <p:commandLink styleClass="UI-prevButtonFA Fleft"/>
+                <p:commandLink styleClass="UI-prevButtonFA Fleft"
+                               actionListener="#{tdcto.prevPage}"/>
 
-                <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"/>
+                <p:commandLink styleClass="UI-nextButtonFA Fright UI-tcmButton"
+                               actionListener="#{tdcto.nextPage}"/>
             </div>
         </p:tab>
-        <p:tab title="Joint Holder" disabled="true">
+        <p:tab title="Joint Holder" disabled="true" rendered="false">
         </p:tab>
 
     </p:tabView>
