--- a/tcm/modules/web/src/main/webapp/pages/custody/td/acctholder.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/acctholder.xhtml
@@ -19,9 +19,9 @@
 						placeholder="First Name" required="true">
 					</p:inputText>
 					<p:inputText
-						styleClass="CustomWidthFA FS14 InputMergeLeft InputMergeRight"
+						styleClass="MiddleInitialWidth FS14 InputMergeLeft InputMergeRight"
 						value="#{tdcto.tdMasterData.acctOwnersDetail.midInitial}"
-						placeholder="Middle Name">
+						placeholder="Middle Initial">
 					</p:inputText>
 					<p:inputText styleClass="CustomWidthFA FS14 InputMergeLeft"
 						value="#{tdcto.tdMasterData.acctOwnersDetail.lastName}"
@@ -104,9 +104,9 @@
 						placeholder="First Name" required="true">
 					</p:inputText>
 					<p:inputText
-						styleClass="CustomWidthFA FS14 InputMergeLeft InputMergeRight"
+						styleClass="MiddleInitialWidth FS14 InputMergeLeft InputMergeRight"
 						value="#{tdcto.tdMasterData.acctOwnersDetail.midInitial}"
-						placeholder="Middle Name">
+						placeholder="Middle Initial">
 					</p:inputText>
 					<p:inputText styleClass="CustomWidthFA FS14 InputMergeLeft"
 						value="#{tdcto.tdMasterData.acctOwnersDetail.lastName}"
