--- a/tcm/modules/web/src/main/webapp/pages/custody/td/beneficiary.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/beneficiary.xhtml
@@ -80,8 +80,8 @@
 					placeholder="First Name">
 				</p:inputText>
 				<p:inputText
-					styleClass="CustomWidthFA FS14 InputMergeLeft InputMergeRight"
-					placeholder="Middle Name">
+					styleClass="MiddleInitialWidth FS14 InputMergeLeft InputMergeRight"
+					placeholder="Middle Initial">
 				</p:inputText>
 				<p:inputText styleClass="CustomWidthFA FS14 InputMergeLeft"
 					placeholder="Last Name">
@@ -157,6 +157,11 @@
 					<p:inputText styleClass="Wid100 CustomWidthFA2 FS14 Mar5"
 						placeholder="Share %">
 					</p:inputText>
+				</div>
+				<div class="Container45 Fright CustomWidthFA2 MarTop5">
+				<p:button value="Save">
+    <f:param name="BeneficiarySave"/>
+</p:button>
 				</div>
 			</div>
 			<div class="EmptyBox5"></div>
