--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/index.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/index.xhtml
@@ -14,7 +14,7 @@
         <h:form id="form">
             <!-- BOX START -->
             <div class="layout-portlets-box">
-                <div class="Container100 Responsive100"><!-- ROHIT's CHANGE -->
+                <div class="Container100 Responsive100">
                     <div class="ContainerIndent">
                         <div class="Container100">
 
@@ -33,7 +33,7 @@
                 
                 <div class="Container100 Responsive100">
                     <div class="ContainerIndent">
-                        <div class="Container100 MarginBottom">
+                        <div class="Container100 MarginBottom ConsumerDashboardTable">
 
                             <p:dataTable id="singleDT" var="investment" value="#{tcmdash.manageAccountList}"
                                          emptyMessage="No account were created. Use new application to add account."
