Committing TCM Project- Prakash Lal

--- a/tcm/modules/web/src/main/webapp/pages/custody/td/beneficiary.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/custody/td/beneficiary.xhtml
@@ -146,7 +146,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="EmptyBox20"></div>
+			<div class="EmptyBox10"></div>
 			<div class="Container100">
 				<div class="Container45 Fleft CustomWidthFA2 MarTop5">
 					<label Class="Container100"
@@ -158,7 +158,9 @@
 						placeholder="Share %">
 					</p:inputText>
 				</div>
-				<div class="Container45 Fright CustomWidthFA2 MarTop5">
+				
+				<div class="Container45 Fright CustomWidthFA2 MarTop5 BeneficiaryButton">
+				<div class="EmptyBox20"></div>
 				<p:button value="Save">
     <f:param name="BeneficiarySave"/>
 </p:button>
